--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "node ./dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,10 +14,8 @@
   "description": "",
   "dependencies": {
     "@types/cookie-parser": "^1.4.10",
-    "@types/multer": "^2.0.0",
     "bcryptjs": "^3.0.3",
     "bwip-js": "^4.8.0",
-    "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -26,9 +24,7 @@
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
-    "multer": "^2.0.2",
     "pdfkit": "^0.17.2",
-    "redis": "^5.10.0",
     "zod": "^4.1.13"
   },
   "devDependencies": {
