--- a/.env
+++ b/.env
@@ -16,15 +16,5 @@ SUPER_ADMIN_EMAIL=super@gmail.com
 SUPER_ADMIN_PASSWORD=1234567
 
 #FRONTEND URL
-FRONTEND_URL=http://localhost:3000
+FRONTEND_URL=https://pos-system-seven-pi.vercel.app
 
-#redis
-REDIS_HOST=redis-18222.c92.us-east-1-3.ec2.cloud.redislabs.com
-REDIS_PORT=18222
-REDIS_USERNAME=default
-REDIS_PASSWORD=uYo44O2tsw1j5QXLPVeqQPpgzHum7myW
-
-#cloudinary
-CLOUDINARY_CLOUD_NAME=ddgmvjgn8
-CLOUDINARY_API_KEY=892858264128839
-CLOUDINARY_API_SECRET=dtLMdr8p2UugcSSpPF3xZBgztC8
